--- a/services/supplier-service/reports/jacoco/mtogo.supplier.server.security/Middleware.java.html
+++ b/services/supplier-service/reports/jacoco/mtogo.supplier.server.security/Middleware.java.html
@@ -26,40 +26,44 @@ import java.util.List;
 <span class="nc" id="L26">    }</span>
 
     public static void registerAuth(Context ctx) {
-
-<span class="nc" id="L30">        String path = ctx.path();</span>
-<span class="nc" id="L31">        log.info(&quot;Registering auth&quot;);</span>
-<span class="nc bnc" id="L32" title="All 4 branches missed.">        if (path.equals(&quot;/api/login&quot;) || path.equals(&quot;/api/health&quot;)) {</span>
-<span class="nc" id="L33">            log.info(&quot;public route&quot;);</span>
-<span class="nc" id="L34">            return;</span>
+<span class="nc" id="L29">        var permittedRoles = ctx.routeRoles();</span>
+<span class="nc bnc" id="L30" title="All 4 branches missed.">        if (permittedRoles == null || permittedRoles.isEmpty()) {</span>
+<span class="nc" id="L31">            return;</span>
+        }
+        /*
+        String path = ctx.path();
+        log.info(&quot;Registering auth&quot;);
+        if (path.equals(&quot;/api/login&quot;) || path.equals(&quot;/api/health&quot;)) {
+            log.info(&quot;public route&quot;);
+            return;
         }
 
-<span class="nc" id="L37">        String header = ctx.header(&quot;Authorization&quot;);</span>
-<span class="nc bnc" id="L38" title="All 4 branches missed.">        if (header == null || !header.startsWith(&quot;Bearer &quot;)) {</span>
-<span class="nc" id="L39">            log.info(&quot;Invalid authorization header&quot;);</span>
-<span class="nc" id="L40">            throw new UnauthorizedResponse(&quot;Missing or invalid Authorization header&quot;);</span>
+         */
+
+<span class="nc" id="L43">        String header = ctx.header(&quot;Authorization&quot;);</span>
+<span class="nc bnc" id="L44" title="All 4 branches missed.">        if (header == null || !header.startsWith(&quot;Bearer &quot;)) {</span>
+<span class="nc" id="L45">            log.info(&quot;Invalid authorization header&quot;);</span>
+<span class="nc" id="L46">            throw new UnauthorizedResponse(&quot;Missing or invalid Authorization header&quot;);</span>
         }
 
-<span class="nc" id="L43">        String token = header.substring(&quot;Bearer &quot;.length());</span>
+<span class="nc" id="L49">        String token = header.substring(&quot;Bearer &quot;.length());</span>
 
-<span class="nc" id="L45">        DecodedJWT jwt = parser.validate(token);</span>
+<span class="nc" id="L51">        DecodedJWT jwt = parser.validate(token);</span>
 
-<span class="nc" id="L47">        ctx.attribute(&quot;email&quot;, jwt.getClaim(&quot;email&quot;).asString());</span>
-<span class="nc" id="L48">        ctx.attribute(&quot;role&quot;, jwt.getClaim(&quot;role&quot;).asList(String.class));</span>
+<span class="nc" id="L53">        ctx.attribute(&quot;email&quot;, jwt.getClaim(&quot;email&quot;).asString());</span>
+<span class="nc" id="L54">        ctx.attribute(&quot;role&quot;, jwt.getClaim(&quot;role&quot;).asList(String.class));</span>
+<span class="nc" id="L55">        ctx.attribute(&quot;actor_id&quot;, jwt.getClaim(&quot;actor_id&quot;).asString());</span>
 
-<span class="nc" id="L50">        var permittedRoles = ctx.routeRoles();</span>
-<span class="nc bnc" id="L51" title="All 4 branches missed.">        if (permittedRoles == null || permittedRoles.isEmpty()) {</span>
-<span class="nc" id="L52">            return;</span>
-        }
-<span class="nc bnc" id="L54" title="All 2 branches missed.">        for (String r : (List&lt;String&gt;) ctx.attribute(&quot;role&quot;)) {</span>
-<span class="nc bnc" id="L55" title="All 2 branches missed.">            for (RouteRole role : permittedRoles) {</span>
-<span class="nc bnc" id="L56" title="All 2 branches missed.">                if (role.toString().equalsIgnoreCase(r)) {</span>
-<span class="nc" id="L57">                    return;</span>
+
+<span class="nc bnc" id="L58" title="All 2 branches missed.">        for (String r : (List&lt;String&gt;) ctx.attribute(&quot;role&quot;)) {</span>
+<span class="nc bnc" id="L59" title="All 2 branches missed.">            for (RouteRole role : permittedRoles) {</span>
+<span class="nc bnc" id="L60" title="All 2 branches missed.">                if (role.toString().equalsIgnoreCase(r)) {</span>
+<span class="nc" id="L61">                    return;</span>
                 }
-<span class="nc" id="L59">            }</span>
-<span class="nc" id="L60">        }</span>
-<span class="nc" id="L61">        log.info(&quot;Not allowed&quot;);</span>
-<span class="nc" id="L62">        throw new ForbiddenResponse(&quot;Not allowed&quot;);</span>
+<span class="nc" id="L63">            }</span>
+<span class="nc" id="L64">        }</span>
+<span class="nc" id="L65">        log.info(&quot;Not allowed&quot;);</span>
+<span class="nc" id="L66">        throw new ForbiddenResponse(&quot;Not allowed&quot;);</span>
     }
 
 }
