--- a/services/supplier-service/reports/jacoco/mtogo.supplier.server/Main.java.html
+++ b/services/supplier-service/reports/jacoco/mtogo.supplier.server/Main.java.html
@@ -1,21 +1,53 @@
 <?xml version="1.0" encoding="UTF-8"?><!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en"><head><meta http-equiv="Content-Type" content="text/html;charset=UTF-8"/><link rel="stylesheet" href="../jacoco-resources/report.css" type="text/css"/><link rel="shortcut icon" href="../jacoco-resources/report.gif" type="image/gif"/><title>Main.java</title><link rel="stylesheet" href="../jacoco-resources/prettify.css" type="text/css"/><script type="text/javascript" src="../jacoco-resources/prettify.js"></script></head><body onload="window['PR_TAB_WIDTH']=4;prettyPrint()"><div class="breadcrumb" id="breadcrumb"><span class="info"><a href="../jacoco-sessions.html" class="el_session">Sessions</a></span><a href="../index.html" class="el_report">supplier-service</a> &gt; <a href="index.source.html" class="el_package">mtogo.supplier.server</a> &gt; <span class="el_source">Main.java</span></div><h1>Main.java</h1><pre class="source lang-java linenums">package mtogo.supplier.server;
 
-import java.io.IOException;
+import java.util.Map;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-<span class="nc" id="L8">public class Main {</span>
+import com.rabbitmq.client.Connection;
 
-<span class="nc" id="L10">    private static final Logger log = LoggerFactory.getLogger(Main.class);</span>
+import mtogo.supplier.controller.OrderController;
+import mtogo.supplier.handlers.IMessageHandler;
+import mtogo.supplier.handlers.OrderRPCHandler;
+import mtogo.supplier.messaging.ConnectionManager;
+import mtogo.supplier.messaging.Consumer;
+import mtogo.supplier.messaging.MessageRouter;
+import tools.jackson.databind.ObjectMapper;
+
+<span class="nc" id="L18">public class Main {</span>
+
+<span class="nc" id="L20">    private static final Logger log = LoggerFactory.getLogger(Main.class);</span>
+
     public static void main(String[] args) {
         try {
-<span class="nc" id="L13">            JavalinBuilder.startServer(7070);</span>
-<span class="nc" id="L14">            LegacyDBAdapter.getAdapter().startListener(1984);</span>
-            
-<span class="nc" id="L16">        } catch (IOException ex) {</span>
-<span class="nc" id="L17">            log.error(ex.getMessage());</span>
-<span class="nc" id="L18">        }</span>
-<span class="nc" id="L19">    }</span>
+
+<span class="nc" id="L25">            Connection connection = ConnectionManager.getConnectionManager().getConnection();</span>
+
+<span class="nc" id="L27">            OrderRPCHandler orderRPCHandler = new OrderRPCHandler(new ObjectMapper());</span>
+
+<span class="nc" id="L29">            Map&lt;String, IMessageHandler&gt; map = Map.of(</span>
+<span class="nc" id="L30">                    orderRPCHandler.getReplyQueue(), orderRPCHandler</span>
+            );
+
+<span class="nc" id="L33">            MessageRouter router = new MessageRouter(map);</span>
+<span class="nc" id="L34">            String[] bindingKeys = map.keySet().toArray(new String[map.size()]);</span>
+
+<span class="nc" id="L36">            Consumer consumer = new Consumer();</span>
+<span class="nc" id="L37">            consumer.consumeMessages(bindingKeys, connection, router);</span>
+
+<span class="nc" id="L39">            OrderController controller = new OrderController(orderRPCHandler);</span>
+<span class="nc" id="L40">            JavalinBuilder.startServer(7070, controller);</span>
+<span class="nc" id="L41">            LegacyDBAdapter.getAdapter().startListener(1984);</span>
+
+<span class="nc" id="L43">            log.info(&quot;Supplier service started&quot;);</span>
+<span class="nc" id="L44">            log.debug(&quot;Debug logging enabled&quot;);</span>
+
+<span class="nc" id="L46">        } catch (Exception e) {</span>
+            // A core compoenent is not working. Crash jvm and let orchestrator handle.
+<span class="nc" id="L48">            log.error(&quot;CRITICAL: {}&quot;, e.getMessage());</span>
+<span class="nc" id="L49">            System.exit(1);</span>
+<span class="nc" id="L50">        }</span>
+<span class="nc" id="L51">    }</span>
 }
 </pre><div class="footer"><span class="right">Created with <a href="http://www.jacoco.org/jacoco">JaCoCo</a> 0.8.14.202510111229</span></div></body></html>
